# granite-switch-ollama-mellea

./: .gitignore  MELLEA.md  README.md  citations_deep_dive.ipynb  hello_mellea.py  hello_mellea_ollama.ipynb  main.py  ollama_intrinsic.py  pyproject.toml  rag_101_ollama.ipynb  rag_corpus.py  rag_flow.py  rag_flow_ollama.ipynb  walkthrough.ipynb
