[project]
name = "granite-switch-ollama-mellea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gguf>=0.19.0",
    "jinja2>=3.1.6",
    "mellea>=0.6.0",
    "pyyaml>=6.0.3",
    # Conversational RAG flow: retrieval + citation sentence boundaries.
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "torch>=2.2",
    "httpx>=0.27",
    "tqdm>=4.66",
    "nltk>=3.9",
]
